--- a/README
+++ b/README
@@ -1,11 +1,15 @@
+
 Atomic Tagging
 ==============
+This is the Java implementation of the Atomic Tagging API and a CLI. To learn about about 
+Atomic Tagging, please refer to http://atomictagging.org or the atomictagging-docs repository.
 
-If you read this, you've already got the sources from GitHub (http://github.com/AtomicTagging).
-Get the SQL project as well and set up a MySQL database with the provided SQL script. Then, 
-import this directory into an Eclipse Java Project and start the Shell via the Shell.java class.
+To setup an Atomic Tagging environment, check out the atomictagging-sql repository and set up 
+a MySQL database with the provided script. Then, import this Java repository  into an Eclipse 
+Java Project, configure the CLI via the Configuration class  and start the Shell via the 
+Shell class.
 
 Please let me know of any problems during set up.
 
-Stephan Mann, 2010-04-03
+Stephan Mann, 2010-04-04
 <stephan@atomictagging.org>
