--- a/README
+++ b/README
@@ -13,3 +13,5 @@ Please let me know of any problems during setup.
 
 Stephan Mann, 2010-04-04
 <stephan@atomictagging.org>
+
+This is another SVN test.
